styles.css
.nav {
    overflow: hidden; }
  .nav a {
    float: left;
    margin: 10px;
    display: block; }
  .nav #menu-toggle {
    display: none; }
  @media screen and (max-width: 600px) {
    .nav a:not(:first-child) {
      display: none; }
    .nav a#menu-toggle {
      float: right;
      display: block; } }
  @media screen and (max-width: 600px) {
    .nav.nav--open {
      position: relative; }
    .nav.nav--open #menu-toggle {
      position: absolute;
      right: 0;
      top: 0; }
    .nav.nav--open a {
      float: none;
      display: block;
      text-align: left; } }
  .menu-toggle__bar1, .menu-toggle__bar2, .menu-toggle__bar3 {
    width: 21px;
    height: 3px;
    background-color: #000000;
    margin: 4px 0;
    transition: 0.3s; }
  .menu-toggle--open .menu-toggle__bar1 {
    transform: translate(0, 7px) rotate(-45deg); }
  .menu-toggle--open .menu-toggle__bar2 {
    opacity: 0; }
  .menu-toggle--open .menu-toggle__bar3 {
    transform: translate(0, -7px) rotate(45deg); }
/* Root selector for defining global CSS variables */
  
/* Root selector for defining global CSS variables */
:root {
    --clr-dark: #333;  /* Dark color for text in light mode, background in dark mode */
    --clr-light: #fff; /* Light color for background in light mode, text in dark mode */
      --hacker_black: #0D0208;
    --dark_green: #003B00;
    --Islamic_green: #008F11;
    --Malachite: #00FF41;
  }
  
  /* Base styles for the body */
  body {
      font-family: Arial, sans-serif;
      display: flex;
      justify-content: center;
      align-items: center;
      height: 100vh;
      margin: 0;
      background-color: var(--hacker-black);
      color: var(--Malachite);
      transition: background-color 0.3s, color 0.3s;
  }
  
  /* Styles for dark mode */
  .dark-mode { /* Use body.dark-mode if targets only at body */
      background-color: var(--hacker_black);
      color: var(--Malachite);
  }
  
  /* Container for centering content */
  .container {
      text-align: center;
  }
  
  /* Heading styles */
  h1 {
      margin-bottom: 20px;
          color: var(--Islamic_green);
  }
  
  
  /* Styles for the toggle container */
  .toggle-container {
      cursor: pointer;
  }
  
  /* Styles for the sun and moon icons */
  .sun-icon, .moon-icon {
      width: 24px;
      height: 24px;
      transition: opacity 0.3s;
  }
  
  /* Hide moon icon by default (light mode) */
  .moon-icon {
      display: none;
  }
  
  /* Show moon icon and hide sun icon in dark mode */
  .dark-mode .sun-icon {
      display: none;
  }
  
  .dark-mode .moon-icon {
      display: inline-block;
  }

